--- a/Task Lesson/index.html
+++ b/Task Lesson/index.html
@@ -9,11 +9,11 @@
 </head>
 
 <body>
-    <section class="blog-section">
+   
         <div class="container">
-            <div class="title">
+            <div>
                 <header class="header">
-                    <h2>Our Blog Posts</h2>
+                    <h2 class="title">Our Blog Posts</h2>
                 </header>
             </div>
 
@@ -22,11 +22,11 @@
                 <div class="row">
                     <article class="col-4">
                         <div class="img">
-                            <img src="https://preview.colorlib.com/theme/lifecoach/images/img_1.jpg.webp" alt="">
+                            <img class="img" src="https://preview.colorlib.com/theme/lifecoach/images/img_1.jpg.webp" alt="">
                         </div>
                         <div class="desc">
-                            <h2><a href="">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</a></h2>
-                            <div>
+                            <h2><a class="desc-h2"  href="">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</a></h2>
+                            <div class="news">
                                 Ham Brook
                                 <span>.</span>
                                 yanvar 18,2019
@@ -44,11 +44,11 @@
                     </article>
 
                     <article class="col-4">
-                        <div class="img">
-                            <img src="https://preview.colorlib.com/theme/lifecoach/images/img_1.jpg.webp" alt="">
+                        <div >
+                            <img class="img" src="https://preview.colorlib.com/theme/lifecoach/images/img_1.jpg.webp" alt="">
                         </div>
 
-                        <h2><a href="">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</a></h2>
+                        <h2><a class="desc-h2"  href="">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</a></h2>
                         <div>
                             Ham Brook
                             <span>.</span>
@@ -65,11 +65,11 @@
                     </article>
 
                     <article class="col-4">
-                        <div class="img">
-                            <img src="https://preview.colorlib.com/theme/lifecoach/images/img_1.jpg.webp" alt="">
+                        <div >
+                            <img class="img" src="https://preview.colorlib.com/theme/lifecoach/images/img_1.jpg.webp" alt="">
                         </div>
 
-                        <h2><a href="">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</a></h2>
+                        <h2 ><a class="desc-h2"  href="">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</a></h2>
                         <div>
                             Ham Brook
                             <span>.</span>
@@ -89,7 +89,7 @@
 
             </main>
         </div>
-    </section>
+  
 </body>
 
 </html>
